fix: Comment count top and bottom spacing added.

--- a/assets/css/unminified/style-modern-rtl.css
+++ b/assets/css/unminified/style-modern-rtl.css
@@ -5311,6 +5311,10 @@ input[type="color"]::-webkit-color-swatch {
   padding-top: 0;
 }
 
+.ast-plain-container .comments-count-wrapper {
+  padding: 0 0 1.875em 0;
+}
+
 .ast-plain-container .children .ast-comment {
   margin: 2.250em 0 0 0;
 }
